--- a/src/main/resources/assets/realmofdestiny/lang/en_us.json
+++ b/src/main/resources/assets/realmofdestiny/lang/en_us.json
@@ -4,9 +4,12 @@
 
   "item.realmofdestiny.change_stone": "Change Stone",
 
+
   "block.realmofdestiny.gem_polishing_station": "Gem Polishing Station",
+  "block.realmofdestiny.pedestal": "Pedestal",
+
+
 
   "recipe.realmofdestiny.changestone.chance": "chance: %d",
-
   "recipe.realmofdestiny.changestone.failed": "Change Failed"
 }
