--- a/src/main/resources/assets/realmofdestiny/lang/zh_cn.json
+++ b/src/main/resources/assets/realmofdestiny/lang/zh_cn.json
@@ -12,6 +12,7 @@
   "block.realmofdestiny.stripped_bolt_log": "去皮电光木原木",
   "block.realmofdestiny.bolt_sapling": "电光树树苗",
   "block.realmofdestiny.bolt_planks": "电光树木板",
+  "block.realmofdestiny.creative_energy_matrix": "创造能量矩阵",
 
 
   "recipe.realmofdestiny.changestone.chance": "概率: %d",
@@ -43,7 +44,7 @@
 
   "book.realmofdestiny.items.change_stone.name": "转化石",
   "book.realmofdestiny.items.change_stone.text0": "拿着这个石头右键可被转化的方块,方块会被转化成对应的新方块(有一定概率)$(br2)请查看jei获取转化配方以及概率",
-  "recipe.realmofdestin.progress": "Time: %d tick",
-  "recipe.realmofdestiny.energy": "Energy: %d FE",
-  "recipe.realmofdestiny.pedestal_lighting.under_bolt_leaves": "There should be Bolt Leaves directly above the pedestal,and there should be no obstruction"
+
+  "book.realmofdestiny.items.creative_energy_matrix.name": "创造能量矩阵",
+  "book.realmofdestiny.items.creative_energy_matrix.text0": "可以主动/被动输出FE"
 }
