--- a/src/main/resources/assets/realmofdestiny/lang/zh_cn.json
+++ b/src/main/resources/assets/realmofdestiny/lang/zh_cn.json
@@ -5,15 +5,17 @@
   "item.realmofdestiny.change_stone": "转换石",
 
 
-  "tooltip.realmofdestiny.held.shift": "按下Shift查看更多信息",
-  "tooltip.realmofdestiny.held.alt": "按下Alt查看更多信息",
-  "tooltip.realmofdestiny.held.control": "按下Control查看更多信息",
+  "tooltip.realmofdestiny.held.shift": "§9按下§6Shift§9查看更多信息",
+  "tooltip.realmofdestiny.held.alt": "§9按下§6Alt§9查看更多信息",
+  "tooltip.realmofdestiny.held.control": "§9按下§6Control§9查看更多信息",
+
   "tooltip.realmofdestiny.change_stone": "可以将部分方块转化为特定方块",
   "tooltip.realmofdestiny.creative_energy_matrix": "可以无限输出FE",
-  "tooltip.realmofdestiny.pedestal": "可以放入物品进行展示,可以用来制作特殊配方",
+  "tooltip.realmofdestiny.pedestal0": "可以放入物品进行展示",
+  "tooltip.realmofdestiny.pedestal1": "可以用来制作特殊配方",
 
-  "tooltip.realmofdestiny.liquid.amount.with.capacity": "容量: %d/%d",
-  "tooltip.realmofdestiny.liquid.amount": "容量: %d",
+  "tooltip.realmofdestiny.liquid_amount_with_capacity": "容量: %d/%d",
+  "tooltip.realmofdestiny.liquid_amount": "容量: %d",
 
 
   "block.realmofdestiny.gem_polishing_station": "宝石加工站",
