--- a/src/main/resources/assets/realmofdestiny/lang/en_us.json
+++ b/src/main/resources/assets/realmofdestiny/lang/en_us.json
@@ -38,5 +38,10 @@
   "addon_item.realmofdestiny.input_chance": "Each upgrade can reduce the probability of input items being consumed by %d",
   "addon_item.realmofdestiny.output_chance": "Each upgrade can increase the probability of product output by %d",
   "addon_item.realmofdestiny.speed": "Each upgrade can reduce procressingTime by %d",
-  "addon_item.realmofdestiny.hold_ctrl": "Press Ctrl + right-click to open the upgrade menu"
+  "addon_item.realmofdestiny.hold_ctrl": "Press Ctrl + right-click to open the upgrade menu",
+
+
+
+  "jade.realmofdestiny.pedestal.progress": "Progress: %d",
+  "config.jade.plugin_realmofdestiny.pedestal": "Pedestal"
 }
