--- a/src/main/resources/assets/realmofdestiny/lang/zh_cn.json
+++ b/src/main/resources/assets/realmofdestiny/lang/zh_cn.json
@@ -39,6 +39,7 @@
   "addon_item.realmofdestiny.output_chance": "每个升级可增加 %d 产物产出概率",
   "addon_item.realmofdestiny.speed": "每个升级可减少 %d 配方时间",
   "addon_item.realmofdestiny.hold_ctrl": "按住 ctrl + 右键 打开升级界面",
+  "addon_item.realmofdestiny.max_stack_size": "最大堆叠数量: %d",
 
 
 
